FlightPath 4.x Changelog
========================

2013-03-01
  Tweaked TinyMCE module to give more options.
  
  Fixed bug in student_search.module where searching for both first
  and last name caused a mysql error.
  
  Added TinyMCE module to core, so it is now built in to FlightPath by default.
  
  Updated installation to install TinyMCE by default.
  
  Modified descriptions of some form elements.
  
  Modified system.module and install.php to better reflect how cron should be set up.
  
  
2013-02-28
  Fixed announcements.install so that a sample announcement is inserted by default.
    

2013-01-14
  Changed the order in which advised courses are added to groups.  They are now
  added FIRST instead of LAST.  This is so that an advised courses will never be "overwritten"
  by a fulfilled course, and the fulfilled course will just go to the next group.  (There was
  a bug).


2012-12-17
  Modified user.module, so role headers on permissions form appear for every module.
  Otherwise, it was confusing when the list of permissions was very long.
  
  Moving FlightPath version from dev to 4.0-rc1, signifying "release candidate" status.


2012-12-14
  More work on Course Search, making the rotation schedule entry more closely
  follow the established term_id structure.


2012-12-13
  Added jQuery UI plugin to core, as well as its CSS file.
  
  Expanded Course Search's edit abilities, to make it easier to
  update large numbers of courses.


2012-12-10
  Fixed bug in the report bug popup, where a user couldn't submit
  more than one report per session.
  

2012-12-07
  Fixed bug which caused user roles to not be editable from form.


2012-11-30
  Fixed a few minor bugs around FP, mostly related to display.
  
  Course descriptions have non-UTF8 chars stripped out by default.  This
  might need to be something I re-think for version 5.x, so other languages can
  use it.
  
  Changed Modules page to make it more clear when a core module is overrided.  What