@@ -1,5 +1,5 @@
 name = Announcements
 description = Administrators may enter announcements which can then be displayed in a block for specific users.
-version = 2.0
-requires = content
 core = 4.x
+requires = content
+
