@@ -1,4 +1,3 @@
 name = Blank Degree Search
 description = This module lets users view "blank" degree plans in FlightPath.
-version = 1.1.1
 core = 4.x 
