@@ -1,4 +1,3 @@
 name = Stats
 description = Look up various usage stats about FlightPath
-version = 1.2
 core = 4.x
