@@ -1,5 +1,4 @@
 name = System
 description = This module controls various settings for FlightPath, and is required for FlightPath to run.  It cannot be disabled.
-version = 1.1.1
 required = true
  
